Update response validation logic in response validator file